# QPE-FIT

./: LICENSE  README.md  generate_timings.py  mcmc_fixedphase.py  ns.py  params.json  pn_trajectory.py  pn_trajectory_sparse.py  priors.json  pyproject.toml  read_chain.py
ero1/: generate_timings.py  mcmc_fixedphase.py  pn_trajectory.py
no_precess/: convergence_plots.py  generate_timings.py  mcmc_fixedphase.py  pn_trajectory.py  submit_jobs.py
src/qpe_fit/: generate_timings.py  ns.py  trajectory.py
with_precess/: generate_timings.py  mcmc_fixedphase.py  pn_trajectory.py  submit_jobs.py
