[project]
name = "qpe-fit"
version = "0.1.11"
dependencies = [
    "numpy==2.3.5",
    "ultranest==4.4.0",
    "corner==2.2.3",
    "matplotlib==3.10.8",
    "kerrgeopy",
    "h5py==3.15.1"
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x"]

[project.scripts]
qpe-fit = "qpe_fit.ns:main"
qpe-gen = "qpe_fit.generate_timings:main"
